--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Bitmaker Photo Gallery</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
+<head>
+  <meta charset="utf-8">
+  <title>Bitmaker Photo Gallery</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 
-    </body>
+<body>
+  <header>
+    <h1>Bitmaker Photo Gallery</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Add a Photo</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </nav>
+  </header>
+
+</body>
 </html>
