Add footer and text banner at top

--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
     </nav>
   </header>
 
+  <h2>There are <span>6</span> photos</h2>
+
+  <footer>
+    <h6>© Bitmaker 2016</h6>
+  </footer>
+
 </body>
 </html>
