Add photo placeholders

--- a/index.html
+++ b/index.html
@@ -20,6 +20,53 @@
 
   <h2>There are <span>6</span> photos</h2>
 
+  <main>
+    <section>
+      <img src="#" alt="">
+      <aside>
+        <a href="#">Edit</a>
+        |
+        <a href="#">Delete</a>
+      </aside>
+    </section>
+    <section>
+      <img src="#" alt="">
+      <aside>
+        <a href="#">Edit</a>
+        |
+        <a href="#">Delete</a>
+      </aside>
+    </section><section>
+      <img src="#" alt="">
+      <aside>
+        <a href="#">Edit</a>
+        |
+        <a href="#">Delete</a>
+      </aside>
+    </section><section>
+      <img src="#" alt="">
+      <aside>
+        <a href="#">Edit</a>
+        |
+        <a href="#">Delete</a>
+      </aside>
+    </section><section>
+      <img src="#" alt="">
+      <aside>
+        <a href="#">Edit</a>
+        |
+        <a href="#">Delete</a>
+      </aside>
+    </section><section>
+      <img src="#" alt="">
+      <aside>
+        <a href="#">Edit</a>
+        |
+        <a href="#">Delete</a>
+      </aside>
+    </section>
+  </main>
+
   <footer>
     <h6>© Bitmaker 2016</h6>
   </footer>
