--- a/index.html
+++ b/index.html
@@ -7,66 +7,60 @@
 </head>
 
 <body>
+
   <header>
-    <h1>Bitmaker Photo Gallery</h1>
+    <h1 class="title">Bitmaker Photo Gallery</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Add a Photo</a></li>
-        <li><a href="#">About</a></li>
+        <li class="btn"><a href="#">Home</a></li>
+        <li class="btn"><a href="#">Add a Photo</a></li>
+        <li class="btn"><a href="#">About</a></li>
       </ul>
     </nav>
   </header>
 
-  <h2>There are <span>6</span> photos</h2>
+  <h2 class="banner">There are <span>6</span> photos</h2>
 
   <main>
-    <section>
+    <section class="image">
       <img src="https://unsplash.it/300/400?random=847264" alt="">
       <aside>
-        <a href="#">Edit</a>
-        |
-        <a href="#">Delete</a>
+        <a href="#">Edit</a>|<a href="#">Delete</a>
       </aside>
     </section>
-    <section>
+
+    <section class="image">
       <img src="https://unsplash.it/300/400?random=9735659" alt="">
       <aside>
-        <a href="#">Edit</a>
-        |
-        <a href="#">Delete</a>
+        <a href="#">Edit</a>|<a href="#">Delete</a>
       </aside>
     </section>
-    <section>
+
+    <section class="image">
       <img src="https://unsplash.it/300/400?random=63847" alt="">
       <aside>
-        <a href="#">Edit</a>
-        |
-        <a href="#">Delete</a>
+        <a href="#">Edit</a>|<a href="#">Delete</a>
       </aside>
     </section>
-    <section>
+
+    <section class="image">
       <img src="https://unsplash.it/300/400?random=84747383" alt="">
       <aside>
-        <a href="#">Edit</a>
-        |
-        <a href="#">Delete</a>
+        <a href="#">Edit</a>|<a href="#">Delete</a>
       </aside>
-    </section>
-    <section>
+    </section class="image">
+
+    <section class="image">
       <img src="https://unsplash.it/300/400?random=801937" alt="">
       <aside>
-        <a href="#">Edit</a>
-        |
-        <a href="#">Delete</a>
+        <a href="#">Edit</a>|<a href="#">Delete</a>
       </aside>
     </section>
-    <section>
+
+    <section class="image">
       <img src="https://unsplash.it/300/400?random=2348756" alt="">
       <aside>
-        <a href="#">Edit</a>
-        |
-        <a href="#">Delete</a>
+        <a href="#">Edit</a>|<a href="#">Delete</a>
       </aside>
     </section>
   </main>
